@@ -8,7 +8,8 @@ max smb buffer size when CIFSMaxBufSize over 64K.  Fix oops in
 cifs_user_read and cifs_readpages (when EAGAIN on send of smb
 on socket is returned over and over).  Add POSIX (advisory) byte range
 locking support (requires server with newest CIFS UNIX Extensions
-to the protocol implemented).
+to the protocol implemented). Slow down negprot slightly in port 139
+RFC1001 case to give session_init time on buggy servers.
 
 Version 1.40
 ------------
